--- a/calculator.html
+++ b/calculator.html
@@ -8,71 +8,75 @@
 </head>
 <body>
     <div class="container">
-        <p>
-            <button
-            onclick="print ('1')"
-            >1</button>
-            <button
-            onclick="print('2')"
-            >2</button>
-            <button
-            onclick="print('3')"
-            >3</button>
-            <button
-            onclick="print(' + ') "
-            >+</button>
-        </p>
-        <p>
-            <button
-            onclick="print('4') "
-            >4</button>
-            <button
-            onclick="print('5') "
-            >5</button>
-            <button
-            onclick="print('6') "
-            >6</button>
-            <button
-            onclick="print(' - ') "
-            >-</button>
-        </p>
-        <p>
-            <button
-            onclick="print('7') "
-            >7</button>
-            <button
-            onclick="print('8') "
-            >8</button>
-            <button
-            onclick="print('9') "
-            >9</button>
-            <button
-            onclick="print(' * ') "
-            >*</button>
-        </p>
-        <p>
-            <button
-            onclick="print('0') "
-            >0</button>
-            <button
-            onclick="print('.') "
-            >.</button>
-            <button
-            onclick="print(' / ') "
-            >/</button>
-            <button
-            onclick="
-            calculation = eval(calculation)
-            console.log(calculation);
-            alert(`The answer is: ${calculation}`)
-            ">=</button>
-        </p>
-        <p>
-            <button
-            onclick="calculation = ''
-            console.log('Cleared!')"
-            >Clear</button>
-        </p>
+        <div class="box">
+            <h2 class="name">Calculator</h2>
+            <p>
+                <button
+                onclick="print ('1')"
+                >1</button>
+                <button
+                onclick="print('2')"
+                >2</button>
+                <button
+                onclick="print('3')"
+                >3</button>
+                <button
+                onclick="print(' + ') "
+                >+</button>
+            </p>
+            <p>
+                <button
+                onclick="print('4') "
+                >4</button>
+                <button
+                onclick="print('5') "
+                >5</button>
+                <button
+                onclick="print('6') "
+                >6</button>
+                <button
+                onclick="print(' - ') "
+                >-</button>
+            </p>
+            <p>
+                <button
+                onclick="print('7') "
+                >7</button>
+                <button
+                onclick="print('8') "
+                >8</button>
+                <button
+                onclick="print('9') "
+                >9</button>
+                <button
+                onclick="print(' * ') "
+                >*</button>
+            </p>
+            <p>
+                <button
+                onclick="print('0') "
+                >0</button>
+                <button
+                onclick="print('.') "
+                >.</button>
+                <button
+                onclick="print(' / ') "
+                >/</button>
+                <button
+                onclick="
+                calculation = eval(calculation)
+                console.log(calculation);
+                alert(`The answer is: ${calculation}`)
+                ">=</button>
+            </p>
+            <p>
+                <button
+                onclick="calculation = ''
+                console.log('Cleared!')"
+                >Clear</button>
+            </p>
+        </div>
+        
     </div>
     
     <script>
