--- a/calculator.html
+++ b/calculator.html
@@ -79,13 +79,7 @@
         
     </div>
     
-    <script>
-        let calculation = "";
-        function print (unit)
-        {
-            calculation+=unit
-            console.log(calculation);
-        }
+    <script src="script.js">
     </script>
 </body>
 </html>
