--- a/calculator.html
+++ b/calculator.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <div class="box">
-            <h2 class="name">Calculator</h2>
+        <section class="box">
+            <h1 class="name">Calculator</h1>
             <p id="result"></p>
             <p>
                 <button
@@ -77,7 +77,7 @@
                 document.getElementById('result').innerHTML = 'Cleared'"
                 >Clear</button>
             </p>
-        </div>
+        </section>
         
     </div>
     
